como usar los selectores

--- a/forms-tables/04-Introduccion-CSS/estilos.css
+++ b/forms-tables/04-Introduccion-CSS/estilos.css
@@ -16,3 +16,12 @@ p{
     color: chartreuse;
 
 }
+
+.terceraNoticia{
+    font-size: 50;
+    text-transform: uppercase;
+}
+
+.autor, .ubicacion, .fecha{
+    text-decoration: underline;
+}
