--- a/forms-tables/04-Introduccion-CSS/introEstilos.css
+++ b/forms-tables/04-Introduccion-CSS/introEstilos.css
@@ -8,3 +8,9 @@
 .color-rgba{
     color: rgba(20, 59, 51, 0.2);
 }
+
+
+/*Fondo*/
+.fondo{
+    background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fpngtree.com%2Ffree-backgrounds&psig=AOvVaw34HNnmnmvCEf14RlXsvugw&ust=1724899787569000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNCLycvWlogDFQAAAAAdAAAAABAE");
+}
