imagen con atribuctos

--- a/forms-tables/04-Introduccion-CSS/introEstilos.css
+++ b/forms-tables/04-Introduccion-CSS/introEstilos.css
@@ -16,5 +16,11 @@
 }
 
 .ancho{
-    
+    background-color: blanchedalmond;
+    width: 100px;
+}
+.altura{
+    background-color: aquamarine;
+    height: 500px;
+    width: 300;
 }
