--- a/forms-tables/04-Introduccion-CSS/introEstilos.css
+++ b/forms-tables/04-Introduccion-CSS/introEstilos.css
@@ -21,6 +21,12 @@
 }
 .altura{
     background-color: aquamarine;
-    height: 500px;
-    width: 300;
+    height: 200px;
+}
+.tarjeta{
+    border-style: solid;
+    border-color: rgb(1, 187, 78);
+    border-width: 1px;
+    /*border-top: 1px;*/
+    
 }
