--- a/forms-tables/04-Introduccion-CSS/textos.css
+++ b/forms-tables/04-Introduccion-CSS/textos.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 html{
-    font-family: "Source Code Pro", monospace;
+    
     font-size: large;
     font-weight: 400;
 }
