--- a/02-Formularios/estilos/estilos.css
+++ b/02-Formularios/estilos/estilos.css
@@ -76,16 +76,37 @@
     color:#8b8b8b;
 }
 
-.section-inpts {
+.section-inputs {
     display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 label {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
+label span {
+    font-weight: 700;
+}
 label input {
-    width: 100%;
+    width: 80%;
+    background-color: #f3f3f4;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 14pt;
 }
 
 
