--- a/02-Formularios/estilos/estilos.css
+++ b/02-Formularios/estilos/estilos.css
@@ -85,12 +85,11 @@
 form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     gap: 20px;
 }
 
 label {
-    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -99,7 +98,8 @@ label {
 label span {
     font-weight: 700;
 }
-label input {
+
+.section-inputs label input {
     width: 80%;
     background-color: #f3f3f4;
     border: none;
@@ -109,9 +109,52 @@ label input {
     font-size: 14pt;
 }
 
+label input {
+    width: 90%;
+    background-color: #f3f3f4;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 14pt;
+}
 
 
+label input:hover {
+    background-color: white;
+    border: solid 1px #f3f3f4;
+    box-shadow: 0 0 4px #eb50ff4f;
+}
 
+label input:focus {
+    background-color: white;
+    border: solid 1px #f3f3f4;
+    box-shadow: 0 0 4px #eb50ff4f;
+}
+
+.checkbox-label {
+    display: flex;
+    flex-direction: row;
+}
+
+.checkbox-label input[type="checkbox"] {
+    width: 20px;
+}
+
+.checkbox-label span {
+    font-weight: 400;
+}
+
+.submit-btm {
+    background-color: #EA4c89;
+    color: white;
+    font-weight: 500;
+    font-size: ;
+    text-align: center;
+    padding: 15px;
+    border: none;
+    border-radius: 10px;
+}
 
 
 
