finalizacion de formulario

--- a/02-Formularios/estilos/estilos.css
+++ b/02-Formularios/estilos/estilos.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
+    font-family: "Roboto", sans-serif;
+}
+
 .container {
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
+    width: 450px;
 }
 
 .bottons {
@@ -86,7 +94,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    gap: 20px;
+    gap: 30px;
 }
 
 label {
@@ -117,6 +125,7 @@ label input {
     border-radius: 10px;
     outline: none;
     font-size: 14pt;
+    transition: background-color 0.2s, border 0.2s, box-shadow 0.2s;
 }
 
 
@@ -149,11 +158,16 @@ label input:focus {
     background-color: #EA4c89;
     color: white;
     font-weight: 500;
-    font-size: ;
+    font-size: 14pt;
     text-align: center;
     padding: 15px;
     border: none;
     border-radius: 10px;
+    cursor: pointer;
+}
+
+.submit-btm:hover {
+    opacity: 0.75;
 }
 
 
