--- a/08-Tooltip/tooltip.css
+++ b/08-Tooltip/tooltip.css
@@ -8,6 +8,7 @@ body {
 }
 
 .btn-tooltip {
+    position: relative;
     padding: 5px 20px;
     border-radius: 5px;
     border: none;
@@ -17,10 +18,27 @@ body {
     transition: background-color 150ms;
 }
 
-.btn-tooltip:hover {
-    background-color:  rgb(160, 9, 97);;
+.tooltip {
+    position: absolute;
+   /*  visibility: hidden; */
+    opacity: 0;
+    top: -50px;
+    left: -100%;
+    transform: translate(25%);
+    color: black;
+    background-color: rgb(204, 199, 199);
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: opacity 150ms;
 }
 
-.btn-tooltip:hover::before {
-    content: ;
+.btn-tooltip:hover {
+    background-color:  rgb(160, 9, 97);
 }
+.btn-tooltip:hover .tooltip{
+    /* visibility: visible; */
+    opacity: 1;
+}
+/* .btn-tooltip:hover::before {
+    content: ;
+} */
