--- a/09-Responsive/flexbox.css
+++ b/09-Responsive/flexbox.css
@@ -5,10 +5,13 @@
     gap: 0.5rem;
     /* height: 5rem; */
     align-items: center;
-    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .item {
     background-color: salmon;
     padding: 0.25rem;
+    width: 10rem;
 }
