--- a/HTML-CSS/Reto-1/css/styles.css
+++ b/HTML-CSS/Reto-1/css/styles.css
@@ -33,10 +33,27 @@
   margin-right: auto;
   background-color: white;
   border-radius: 20px;
+  overflow: hidden;
  }
 
  .card__header {
   position: relative;
   height: 120px;
   text-align: center;
+ }
+
+ .card__header-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+ }
+
+ .card__header-profile {
+  position: absolute;
+  top: 10px;
+  left: 150px;
+  border-radius: 50%;
+  border: 5px solid white;
+  background-color: white;
  }
