--- a/HTML-CSS/Reto-1/css/styles.css
+++ b/HTML-CSS/Reto-1/css/styles.css
@@ -57,3 +57,22 @@
   border: 5px solid white;
   background-color: white;
  }
+
+ .card__body {
+  position: absolute;
+  top: 200px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+ }
+
+ .card__footer {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  text-align: center;
+ }
+
+ .card__stats{
+  display: inline-block;
+ }
