--- a/HTML-CSS/Reto-1/css/styles.css
+++ b/HTML-CSS/Reto-1/css/styles.css
@@ -64,15 +64,32 @@
   width: 100%;
   height: 100px;
   text-align: center;
+  border-bottom: 2px solid rgb(0 0 0 /0.1);
  }
 
+ .card__text{
+  margin: 0;
+  margin-bottom: 0.5em;
+ }
+
+ .card__text--light{
+  color: hsl(227, 10%, 46%);
+ }
  .card__footer {
   position: absolute;
-  bottom: 15px;
+  bottom: 35px;
   width: 100%;
   text-align: center;
  }
 
  .card__stats{
   display: inline-block;
+  margin: 0 0.5rem;
+  width: 100px;
+  text-align: center;
+ }
+
+ .card_number {
+  margin-bottom: .5em;
+  font-size: 1.8rem;
  }
